# django-test

./: manage.py  pyproject.toml  wsgi.py
blog/migrations/: 0001_initial.py
first_app/: admin.py  models.py  urls.py  views.py
first_app/migrations/: 0001_initial.py
first_app/static/: style.css
first_app/templates/: detail.html  results.html
shwang/: asgi.py  settings.py  urls.py
