[tool.poetry]
name = "shwang"
version = "0.0.1"
description = "shwang django practice"
authors = ["shwang <wangsh6@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.11"
flask = "^3.0.2"
requests = "^2.31.0"
aiohttp = "^3.9.3"
django-filter = "^24.1"
drf-spectacular = "^0.27.1"
django-extensions = "^3.2.3"
mypy = "^1.9.0"
drf-nested-routers = "^0.93.5"
pre-commit = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
